2020-04-01         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawk.1: Updated.
	* gawktexi.in: Updated.

2020-03-20         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-03-19         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-03-16         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.
	* texinfo.tex: Updated.

2020-03-10         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-03-04         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-02-26         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-01-24         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2020-01-20         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-12-21         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-11-04         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-10-17         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-10-06         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Updated.

2019-10-05         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.
	* texinfo.tex: Updated.

2019-10-02         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.
	* sidebar.awk: Updated.
	* texinfo.tex: Updated.

2019-09-24         Antonio Giovanni Colombo   <azc100@gmail.com>

	* texinfo.tex: Updated.

2019-08-12         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-08-07         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-07-22         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.
	* gawk.1: Updated.
	* texinfo.tex: Updated.

2019-07-08         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.