@@ -1,3 +1,7 @@
+2020-04-12         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* gawktexi.in: Updated.
+
 2020-04-01         Antonio Giovanni Colombo   <azc100@gmail.com>
 
 	* gawk.1: Updated.
